--- a/settimana_1/l2_24_10_2023/esercizi/index.html
+++ b/settimana_1/l2_24_10_2023/esercizi/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina esercizio epicode">
-    <title>Document</title>
+    <title>Web Course</title>
 </head>
 
 <body>
