--- a/settimana_1/l2_24_10_2023/esercizi/index.html
+++ b/settimana_1/l2_24_10_2023/esercizi/index.html
@@ -155,8 +155,9 @@
             <p>Blog Epicode &copy; 2023 <br>
                 Testata online di Mario Rossi. registrata con prot. n.213/2018 - Via Luigi Einaudi 2 - Milano P.IVA:
                 00112233 <br>
-                Contatti: <a href="mailto:info@epicode.school">info@epicode.school</a>
             </p>
+            <address>Contatti: <a href="mailto:info@epicode.school">info@epicode.school</a></address>
+
         </div>
 
     </footer>
