--- a/settimana_1/l2_24_10_2023/esercizi/index.html
+++ b/settimana_1/l2_24_10_2023/esercizi/index.html
@@ -125,17 +125,22 @@
                 Categoria: developer <br>
                 Data: 18-9-2020 <br>
             </p>
+        </div>
+        <div>
             <p>
                 <a href="#"> Correggere la sintassi</a> <br>
                 Categoria: develop <br>
                 Data: 16-9-2020 <br>
             </p>
+        </div>
+        <div>
             <p>
                 <a href="#"> Meno Kb nella pagina</a> <br>
                 Categoria: ottimizzazione <br>
                 Data: 30-9-2020 <br>
             </p>
         </div>
+
     </aside>
     <br>
     <footer>
