--- a/settimana_1/l3_25_10_2023/esercizi/index.html
+++ b/settimana_1/l3_25_10_2023/esercizi/index.html
@@ -36,7 +36,7 @@
         </div>
 
             <figure>
-                <video class="main_media" max-width="100%" src="assets/video.mp4" controls poster="assets/focaccia.png"></video>
+                <video class="main_media"  src="assets/video.mp4" controls poster="assets/focaccia.png"></video>
                 <!-- <img class="main_media" src="assets/focaccia.png" alt="focaccia_strana">-->
                 <figcaption>
                     Image: Sally Vegas
