--- a/settimana_1/l3_25_10_2023/esercizi/index.html
+++ b/settimana_1/l3_25_10_2023/esercizi/index.html
@@ -35,14 +35,14 @@
             </p>
         </div>
 
-            <figure>
-                <video class="main_media"  src="assets/video.mp4" controls poster="assets/focaccia.png"></video>
-                <!-- <img class="main_media" src="assets/focaccia.png" alt="focaccia_strana">-->
-                <figcaption>
-                    Image: Sally Vegas
-                </figcaption>
-            </figure>
-            
+        <figure>
+            <video class="main_media" src="assets/video.mp4" controls poster="assets/focaccia.png"></video>
+            <!-- <img class="main_media" src="assets/focaccia.png" alt="focaccia_strana">-->
+            <figcaption>
+                Image: Sally Vegas
+            </figcaption>
+        </figure>
+
 
         <aside>
             <p>
@@ -90,10 +90,13 @@
                 <ol>
                     <li>
                         <h3>Make the focaccia dough</h3><br>
-                        In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix togheter all
-                        the dough ingredient until the flour is fully absorbed. You don't need to actually knead the
-                        dough, tough i sometimes knead it a few times in the bowl when mixing by hand to incorporate the
-                        last of the flour...
+                        <p> In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix togheter
+                            all
+                            the dough ingredient until the flour is fully absorbed. You don't need to actually knead the
+                            dough, tough i sometimes knead it a few times in the bowl when mixing by hand to incorporate
+                            the
+                            last of the flour...
+                        </p>
                     </li>
                 </ol>
                 <p class="more">
