rimosse robe obsolete

--- a/settimana_1/l3_25_10_2023/esercizi/index.html
+++ b/settimana_1/l3_25_10_2023/esercizi/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="logo_cont">
+        <div>
             <img class="logo" src="assets/logo.png">
         </div>
         <div class="header_title">
@@ -23,7 +23,7 @@
         </div>
     </header>
     <main>
-        <div class="main_title">
+        <div>
             <h1>
                 Focaccia with Caramelized Onions, Cranberries, and Brie
             </h1>
