--- a/settimana_1/l4_26_10_2023/lezioni/box_shadow.html
+++ b/settimana_1/l4_26_10_2023/lezioni/box_shadow.html
@@ -9,5 +9,10 @@
 <body>
     <h2>Proprietà box shadow</h2>
     <div id="ombra1">un div ombra</div>
+
+    <h2>background image shadow</h2>
+    <div class="img_shadow_1"></div>
+    <br>
+    <img src="img/img.png" alt="focaccia">
 </body>
 </html>
