lezione css form

--- a/settimana_1/l4_26_10_2023/lezioni/form.html
+++ b/settimana_1/l4_26_10_2023/lezioni/form.html
@@ -22,6 +22,14 @@
         <input type="radio" name="asd" id="" value="20-30" name="eta">
         <input type="radio" name="asd" id="" value="30-40" name="eta">
         <input type="radio" name="asd" id="" value="40-50" name="eta">
+        <hr>
+        <input type="number" name="" id="" min="10" max="50" value="30">
+        <hr>
+        <input type="email" name="" id="" value=" ">
+        <hr>
+        <input type="text" required>
+        <input type="submit" value="Invio">
+        <hr>
     </form>
 </body>
 
