format document space

--- a/settimana_1/l4_26_10_2023/esercizi/index.html
+++ b/settimana_1/l4_26_10_2023/esercizi/index.html
@@ -14,7 +14,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css">
 
 
@@ -183,9 +185,10 @@
         <h5>BLOG EpiCode &COPY; 2021</h5>
         <p>
             Marshmallow chocolate halvah sugar plum cake.cake biscuit icingMarshmallow chocolate halvah sugar
-            newsletter:        <address>
-                <a href="mailto:info@epicode.school">info@epicode.school</a>
-            </address>
+            newsletter:
+        <address>
+            <a href="mailto:info@epicode.school">info@epicode.school</a>
+        </address>
         </p>
 
     </footer>
