dimensione banner desktop

--- a/test_settimanali_venerdi/s1_27_10_2023/index_desktop.html
+++ b/test_settimanali_venerdi/s1_27_10_2023/index_desktop.html
@@ -113,7 +113,7 @@
             <hr>
             <br>
             <p>
-                <span>&copy 2021 . Immagini di <a href="#">Pixaby</a> </span>
+                <span>&copy 2021 . Immagini di <a href="https://pixabay.com/it/" target="_blank">Pixaby</a> </span>
             </p>
             <br>
         </div>
