--- a/corso/settimana_2_javascript/l5_30_10_2023/lezioni/sintassi.html
+++ b/corso/settimana_2_javascript/l5_30_10_2023/lezioni/sintassi.html
@@ -29,8 +29,23 @@
         // una variabile non dichiarata si crea al primo utilizzo
         let a = 'pippo';
         console.log('a è uguale : '+a);
+/*
+        var x=3;
+        var y = ++x
+        [è uguale a]
+        var x = 3;
+        x++;
+        var y=x;
+x=4 / y=4
 
-
+        var x=3;
+        var y=x++
+        [è uguale a]
+        var x=3;
+        var y=x;
+        x++;
+x=4 / y=3
+ */
     </script>
 </body>
 
