--- a/corso/settimana_2_javascript/l5_30_10_2023/lezioni/sintassi.html
+++ b/corso/settimana_2_javascript/l5_30_10_2023/lezioni/sintassi.html
@@ -29,11 +29,17 @@
         // una variabile non dichiarata si crea al primo utilizzo
         let a = 'pippo';
         console.log('a è uguale : ' + a);
+
+        var utenteAbilitato =true;
+        (utenteAbilitato) ? console.log("utente abilitato") : console.log("utente disabilitato");
+
 /*
+operatore ++ messo prima o dopo 
+
 var x=3;
 var y = ++x
 x=4 / y=4  
-   
+
 [è uguale a]
         
 var x = 3;
