--- a/corso/settimana_2_javascript/l5_30_10_2023/lezioni/sintassi.html
+++ b/corso/settimana_2_javascript/l5_30_10_2023/lezioni/sintassi.html
@@ -29,9 +29,12 @@
         // una variabile non dichiarata si crea al primo utilizzo
         let a = 'pippo';
         console.log('a è uguale : ' + a);
+        console.log(typeof a);
+        console.log(typeof x);
 
         var utenteAbilitato =true;
         (utenteAbilitato) ? console.log("utente abilitato") : console.log("utente disabilitato");
+        console.log(typeof utenteAbilitato);
 
 /*
 operatore ++ messo prima o dopo 
