--- a/corso/settimana_2_javascript/l6_31_10_2023/lezioni/array.html
+++ b/corso/settimana_2_javascript/l6_31_10_2023/lezioni/array.html
@@ -16,6 +16,14 @@
         è una struttura di dati omogenea e può contenere tipi di dato primitivi o oggetti.
     </p>
 
+    <h2> proprietà array</h2>
+    <p>
+        Metodi Array <br>
+        .lenght(); = conta quanti elementi sono contenuti in un array.
+    </p>
+    <p id="demo"></p>
+
+
     <script src="array.js"></script>
 </body>
 
