metodi array push pop shift unshift

--- a/corso/settimana_2_javascript/l6_31_10_2023/lezioni/array.html
+++ b/corso/settimana_2_javascript/l6_31_10_2023/lezioni/array.html
@@ -23,6 +23,21 @@
     </p>
     <p id="demo"></p>
 
+    <p>
+        .push(); = per inserire elemento in un array in coda.
+    </p>
+    <p id="demo2"></p>
+    <p>
+        pop.(); = per rimuovere elemento in un array in coda.
+    </p>
+    <p>
+        .unshift(); = per inserire elemento in un array all'inizio.
+    </p>
+    <p>
+        .shift(); = per inserire elemento in un array all'inizio.
+    </p>
+
+
 
     <script src="array.js"></script>
 </body>
