--- a/corso/settimana_2_javascript/l6_31_10_2023/lezioni/logica_condizionale.html
+++ b/corso/settimana_2_javascript/l6_31_10_2023/lezioni/logica_condizionale.html
@@ -32,7 +32,9 @@
     <p>
         ci fa eseguire un blocco di codice se nessuna delle altre condizioni è verificata.
     </p>
+
     <div id="test1"></div>
+    <div id="test2"></div>
 
 
 
