--- a/corso/settimana_2_javascript/l7_02_11_2023/lezioni/switch.html
+++ b/corso/settimana_2_javascript/l7_02_11_2023/lezioni/switch.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="cicli.js"></script>
+    <h1>Switch</h1>
+    <p>
+        si usa al posto di if - else if - else se ci sono molte condizioni da verificare
+    </p>
+
+
+    <script src="switch.js"></script>
 </body>
 </html>
