--- a/corso/settimana_2_javascript/l7_02_11_2023/lezioni/cicli.html
+++ b/corso/settimana_2_javascript/l7_02_11_2023/lezioni/cicli.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <h1> cicli </h1>
+    <p>
+        permettono di eseguire un istruzione fino a che una condizione sia valida
+    </p>
+    <h2>WHILE</h2>
+    <p>
+        nel caso di while il blocco di codice dovrà contenere un istruzione per modificare la condizione
+    </p>
     <script src="cicli.js"></script>
 </body>
+
 </html>
