--- a/corso/settimana_2_javascript/l7_02_11_2023/lezioni/cicli.html
+++ b/corso/settimana_2_javascript/l7_02_11_2023/lezioni/cicli.html
@@ -16,6 +16,12 @@
     <p>
         nel caso di while il blocco di codice dovrà contenere un istruzione per modificare la condizione
     </p>
+    <h2>DO WHILE</h2>
+    <p>
+        eseguo sempre una volta le istruzioni e poi controllo la condizione per eseguire di nuovo il bloco di codice se verificata
+    
+    </p>
+    <div id="demo"></div>
     <script src="cicli.js"></script>
 </body>
 
