fix semantico test settimanale  03/11/2023

--- a/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
+++ b/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
@@ -38,7 +38,7 @@
             <h1 class="fs-300 bold py-2">Holiday Gift Guides</h1>
             <p class="fs-150 bold">Be a go-gifter</p>
         </div>
-        <div class="bg-white align-center mb-3 mx-2 p-top-1 min-w">
+        <section class="bg-white align-center mb-3 mx-2 p-top-1 min-w">
             <div class="align-left  p-top mx-2 fs-150 ">
                 <h2>Find the perfect gift <span class="fs-20 px-1"><a href="#">Shop now</a> </span></h2>
             </div>
@@ -56,23 +56,23 @@
                     <img class="img_format" src="assets/images/img_4.jpg" alt="" sizes="" srcset="">
                 </div>
             </div>
-        </div>
-        <div class="mb-3 mx-2 min-w">
+        </section>
+        <section class="mb-3 mx-2 min-w">
             <figure>
                 <img class="banner_format" src="assets/images/img_9.png" alt="banner">
                 <figcaption class="align-center  p-top-1 mx-2 fs-150 ">
                     Play the gifting game <span class="fs-20 px-1"><a href="#">Shop gaming</a> </span>
                 </figcaption>
             </figure>
-        </div>
-        <div class="mb-3 mx-2 min-w">
+        </section>
+        <section class="mb-3 mx-2 min-w">
             <figure>
                 <img class="banner_format" src="assets/images/img_10.png" alt="banner">
                 <figcaption class="align-center  p-top-1 mx-2 fs-150 ">
                     The Sound of cheer <span class="fs-20 px-1"><a href="#">Shop audio & accessories</a> </span>
                 </figcaption>
             </figure>
-        </div>
+        </section>
 
     </main>
 
