Test settimanale fix 03/11/2023

--- a/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
+++ b/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
@@ -42,19 +42,16 @@
             <div class="align-left  p-top mx-2 fs-150 ">
                 <h2>Find the perfect gift <span class="fs-20 px-1"><a href="#">Shop now</a> </span></h2>
             </div>
-            <div class="py-2">
-                <div class=" inline_block px-1 ">
-                    <img class="img_format" src="assets/images/img_1.jpg" alt="">
-                </div>
-                <div class=" inline_block px-1 ">
-                    <img class="img_format" src="assets/images/img_2.jpg" alt="">
-                </div>
-                <div class=" inline_block px-1">
-                    <img class="img_format" src="assets/images/img_3.jpg" alt="">
-                </div>
-                <div class=" inline_block px-1">
-                    <img class="img_format" src="assets/images/img_4.jpg" alt="" sizes="" srcset="">
-                </div>
+            <div class="flex py-2">
+
+                <img class="img_format" src="assets/images/img_1.jpg" alt="">
+
+                <img class="img_format" src="assets/images/img_2.jpg" alt="">
+
+                <img class="img_format" src="assets/images/img_3.jpg" alt="">
+
+                <img class="img_format" src="assets/images/img_4.jpg" alt="" sizes="" srcset="">
+            </div>
             </div>
         </section>
         <section class="mb-3 mx-2 min-w">
