--- a/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
+++ b/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
@@ -12,18 +12,18 @@
 <body>
     <header id="header">
         <div class="bg-dark py-1">
-            <img class="header-logo m-1" src="assets/images/logo.png" alt="logo">
+           <a href="#"> <img class="header-logo m-1" src="assets/images/logo.png" alt="logo"></a>
         </div>
         <div class="bg-gray nav-container mb-3">
             <nav>
 
                 <ul>
-                    <li><a href="#" class="light-text fs-20">All</a></li>
-                    <li><a href="#" class="light-text fs-20">Today's deal</a></li>
-                    <li><a href="#" class="light-text fs-20">Customer Service</a></li>
-                    <li><a href="#" class="light-text fs-20">Registry</a></li>
-                    <li><a href="#" class="light-text fs-20">Gift Cards</a></li>
-                    <li><a href="#" class="light-text fs-20">Sell</a></li>
+                    <li class="px-1"><a href="#" class="light-text fs-20">All</a></li>
+                    <li class="px-1"><a href="#" class="light-text fs-20">Today's deal</a></li>
+                    <li class="px-1"><a href="#" class="light-text fs-20">Customer Service</a></li>
+                    <li class="px-1"><a href="#" class="light-text fs-20">Registry</a></li>
+                    <li class="px-1"><a href="#" class="light-text fs-20">Gift Cards</a></li>
+                    <li class="px-1"><a href="#" class="light-text fs-20">Sell</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,13 +44,13 @@
             </div>
             <div class="flex py-2">
 
-                <img class="img_format" src="assets/images/img_1.jpg" alt="">
+                <img class="img_format" src="assets/images/img_1.jpg" alt="vetrina">
 
-                <img class="img_format" src="assets/images/img_2.jpg" alt="">
+                <img class="img_format" src="assets/images/img_2.jpg" alt="vetrina">
 
-                <img class="img_format" src="assets/images/img_3.jpg" alt="">
+                <img class="img_format" src="assets/images/img_3.jpg" alt="vetrina">
 
-                <img class="img_format" src="assets/images/img_4.jpg" alt="" sizes="" srcset="">
+                <img class="img_format" src="assets/images/img_4.jpg" alt="vetrina">
             </div>
             </div>
         </section>
@@ -78,7 +78,7 @@
             <a class="light-text bold" href="#header">Back to top</a>
         </div>
         <div class="bg-dark py-5 align-center">
-            <img class="footer_logo" src="assets/images/logo.png" alt="">
+           <a href="#"> <img class="footer_logo" src="assets/images/logo.png" alt="logo footer"></a>
         </div>
     </footer>
 </body>
