esercizio 3/11/2023 ottimizzato css

--- a/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
+++ b/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
@@ -12,9 +12,9 @@
 <body>
     <header id="header">
         <div class="bg-dark py-1">
-           <a href="#"> <img class="header-logo m-1" src="assets/images/logo.png" alt="logo"></a>
+            <a href="#"> <img class="header-logo m-1" src="assets/images/logo.png" alt="logo"></a>
         </div>
-        <div class="bg-gray nav-container mb-3">
+        <div class="bg-gray  mb-3">
             <nav>
 
                 <ul>
@@ -28,17 +28,17 @@
             </nav>
         </div>
     </header>
-    <main>
-        <div class="py-1 bg-orange align-center mb-3 mx-2 light-text fs-20 min-w">
-            <h2>
+    <main class="align-center">
+        <div class="py-1 bg-orange  main-format ">
+            <h2 class="light-text fs-20 ">
                 Shop All Holiday Gift Cards
             </h2>
         </div>
-        <div class="bg-1 align-center mb-3 mx-2 light-text p-top-3 min-w">
+        <div class="bg-1  main-format light-text p-top-3 ">
             <h1 class="fs-300 bold py-2">Holiday Gift Guides</h1>
             <p class="fs-150 bold">Be a go-gifter</p>
         </div>
-        <section class="bg-white align-center mb-3 mx-2 p-top-1 min-w">
+        <section class="bg-white  main-format p-top-1 ">
             <div class="align-left  p-top mx-2 fs-150 ">
                 <h2>Find the perfect gift <span class="fs-20 px-1"><a href="#">Shop now</a> </span></h2>
             </div>
@@ -54,18 +54,18 @@
             </div>
             </div>
         </section>
-        <section class="mb-3 mx-2 min-w">
+        <section class="main-format">
             <figure>
                 <img class="banner_format" src="assets/images/img_9.png" alt="banner">
-                <figcaption class="align-center  p-top-1 mx-2 fs-150 ">
+                <figcaption class=" p-top-1 mx-2 fs-150 ">
                     Play the gifting game <span class="fs-20 px-1"><a href="#">Shop gaming</a> </span>
                 </figcaption>
             </figure>
         </section>
-        <section class="mb-3 mx-2 min-w">
+        <section class="main-format">
             <figure>
                 <img class="banner_format" src="assets/images/img_10.png" alt="banner">
-                <figcaption class="align-center  p-top-1 mx-2 fs-150 ">
+                <figcaption class=" p-top-1 mx-2 fs-150 ">
                     The Sound of cheer <span class="fs-20 px-1"><a href="#">Shop audio & accessories</a> </span>
                 </figcaption>
             </figure>
@@ -73,12 +73,12 @@
 
     </main>
 
-    <footer>
-        <div class="bg-gray py-1 align-center">
+    <footer class="align-center">
+        <div class="bg-gray py-1 ">
             <a class="light-text bold" href="#header">Back to top</a>
         </div>
-        <div class="bg-dark py-5 align-center">
-           <a href="#"> <img class="footer_logo" src="assets/images/logo.png" alt="logo footer"></a>
+        <div class="bg-dark py-5 ">
+            <a href="#"> <img class="footer_logo" src="assets/images/logo.png" alt="logo footer"></a>
         </div>
     </footer>
 </body>
