--- a/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
+++ b/test_settimanali_venerdi/s2_03_11_2023/amazon_page/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <header id="header">
+    <header id="header" class="mb-3">
         <div class="bg-dark py-1">
             <a href="#"> <img class="header-logo m-1" src="assets/images/logo.png" alt="logo"></a>
         </div>
-        <div class="bg-gray  mb-3">
+        <div class="bg-gray  ">
             <nav>
 
                 <ul>
