fix query es 14

--- a/corso/settimana_3_javascript2/l10_07_11_2023/esercizi/D7.html
+++ b/corso/settimana_3_javascript2/l10_07_11_2023/esercizi/D7.html
@@ -245,8 +245,8 @@
   */ // selectorall img .display none
 
     const hideAllImages = function () {
-      let img = document.querySelector('td img');
-          img.style.display ='none';
+      let img = document.querySelectorAll('img');
+          img.forEach((img)=>{img.style.display ='none';})
      }
      hideAllImages();
 
