--- a/risorse_varie/D8-tasklist/index.html
+++ b/risorse_varie/D8-tasklist/index.html
@@ -5,21 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EPICODE to-do list</title>
- 
-    <link rel="stylesheet" href="asset/css/index.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-    <div class="container">
       <div id="newTask">
         <form>
           <input type="text" placeholder="Aggiungi un task qui" required />
           <button id="addButton">Crea</button>
         </form>
       </div>
-      <div id="tasks">
-       
-      </div>
-    </div>
-    <script src="asset/js/index.js"></script>
+      <div id="tasks"></div>
+    <script src="./js/index.js"></script>
   </body>
 </html>
