--- a/corso/settimana_3_javascript2/l12_09_11_2023/esercizi/index.html
+++ b/corso/settimana_3_javascript2/l12_09_11_2023/esercizi/index.html
@@ -20,6 +20,7 @@
     </div>
     <div>
             <button id="newNumber">Estrai Numero!</button> <br><br>
+            <button id="clear">Clear!</button> <br><br>
             <button id="newTabellina">Genera Tabellina</button>
     </div>
     <div id="containerTabelline">
