--- a/corso/settimana_4_css_avanzato/l14_21_11_2023/esercizi/articolo.html
+++ b/corso/settimana_4_css_avanzato/l14_21_11_2023/esercizi/articolo.html
@@ -23,19 +23,15 @@
   </head>
 
   <body id="top">
-    <a href="#top">
-      <div class="return-icon">
-        <div><i class="fa-regular fa-square-caret-up fa-2x"></i></div>
-      </div>
-    </a>
-    <a href="https://www.calendario-365.it/calendario-2023.html" target="_blank">
+    <div class="return-icon">
+      <a href="#top"><i class="fa-regular fa-square-caret-up"></a></i>
+    </div>
       <div class="calendar-icon">
-        <div><i class="fa-regular fa-calendar-days fa-2x"></i></div>
+        <a href="#"><i class="fa-regular fa-calendar-days"></a></i>
       </div>
-    </a>
-    <a href="https://www.instagram.com/" target="_blank">
+
       <div class="add-icon">
-        <div><i class="fa-regular fa-square-plus fa-2x"></i></div>
+        <a href="#"><i class="fa-regular fa-square-plus"></i></a>
       </div>
     </a>
     <header>
@@ -61,12 +57,12 @@
           <span class="underline"> template per i post <img src="assets/img/underline.svg" alt="" /> </span>
         </h1>
         <p>
-          <img src="./assets/img/badge.png" class="imgLeft" alt="logo Html5" width="70" height="70" />
           <i class="fas fa-pen-square"></i> di Mario Rossi -
           <span><i class="fas fa-clock"></i> pubblicato il 25-10-2020</span>
         </p>
 
         <p>
+            <img src="./assets/img/badge.png" class="imgLeft" alt="logo Html5" width="70" height="70" />
           La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le
           <strong>parti comuni</strong> da applicare a tutte le pagine
         </p>
@@ -176,10 +172,10 @@
         <div>
           <span class="badge"><i class="fas fa-tag"></i></span>
           <a href="./post3.html" title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">
-            Correggere la sintassi
-          </a>
+            Correggere la sintassi</a
+          >
           <p>Categoria: develop</p>
-          <p>Data: 16-9-2020</p>
+          <p><i class="fas fa-calendar-alt"></i>Data: 16-9-2020</p>
         </div>
 
         <div>
