--- a/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/index.html
+++ b/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="header-wrapper">
         <div class="button-wrapper">
-          <div class="header-shop-button"><img src="assets/imgs/logo.png" /> SHOP</div>
+          <div class="header-shop-button"><img src="assets/imgs/logo.png" />SHOP</div>
         </div>
         <div class="button-wrapper">
           <div class="header-button">Our Honey</div>
@@ -39,7 +39,7 @@
             <p>7$/Kg</p>
           </div>
           <div class="card-button">
-            <div>Add to cart</div>
+            <div><span>Add to cart</span></div>
           </div>
         </div>
       </div>
@@ -54,7 +54,7 @@
             <p>7$/Kg</p>
           </div>
           <div class="card-button">
-            <div>Add to cart</div>
+            <div><span>Add to cart</span></div>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
             <p>7$/Kg</p>
           </div>
           <div class="card-button">
-            <div>Add to cart</div>
+            <div><span>Add to cart</span></div>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
             <p>7$/Kg</p>
           </div>
           <div class="card-button">
-            <div>Add to cart</div>
+            <div><span>Add to cart</span></div>
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
             <p>7$/Kg</p>
           </div>
           <div class="card-button">
-            <div>Add to cart</div>
+            <div><span>Add to cart</span></div>
           </div>
         </div>
       </div>
